# transcribe

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/transcribe/: audio.py  cli.py  mistral.py  settings.py  transcribe.py  types.py
